--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.18.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
     "passport": "^0.7.0",
