--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
-JWT_SECRET = "encodade data for  jwt"
+ JWT_SECRET = "encodade data for  jwt"
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_email_password_or_app_specific_password
