--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "@reduxjs/toolkit": "^2.3.0",
     "apexcharts": "^3.53.0",
     "axios": "^1.7.7",
     "jwt-decode": "^3.1.2",
@@ -20,7 +21,10 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
